# sky10

./: .env.example  .gitignore  .golangci.yml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  e2e_fs_process_integration_test.go  e2e_kv_process_integration_test.go  e2e_process_helpers_test.go  go.mod  go.sum  install.ps1  install.sh  main.go  run
cirrus/: README.md  project.yml
commands/: agent_lima.go  agent_lima_test.go  agent_sandbox_source.go  agent_sandbox_source_test.go  apps.go  apps_test.go  daemon.go  daemon_darwin.go  daemon_linux.go  daemon_other.go  daemon_windows.go  fs.go  fs_daemon.go  http_addr.go  http_addr_test.go  id.go  identity_rpc.go  identity_rpc_test.go  invite.go  join.go  key.go  kv.go  link.go  main_test.go  menu_process.go  messaging.go  messaging_test.go  rpc.go  sandbox.go  sandbox_smoke.go  sandbox_smoke_test.go  secrets.go  serve.go  serve_agent_jobs.go  serve_mailbox_retry.go  serve_mailbox_retry_test.go  serve_messaging.go  serve_messaging_bridge.go  serve_messaging_files.go  serve_messaging_files_test.go  (+12 more)
docs/: google-agent-auth-backend-prompt.md  google-agent-auth-client-plan.md
integration/: e2e_agent_network_process_integration_test.go  e2e_fs_daemon_regression_integration_test.go  e2e_fs_process_integration_test.go  e2e_kv_process_integration_test.go  e2e_nostr_relay_test.go  e2e_process_helpers_test.go  e2e_rpc_helpers_test.go  e2e_sandbox_bridge_process_integration_test.go  (+1 more)
menu/: README.md
menu/src-tauri/: Cargo.toml  tauri.conf.json
menu/src-tauri/icons/: icon.icns
menu/src-tauri/src/: main.rs
skyfs/: chunk.go  (+43 more)
(+1522 files in other folders)
