[package]
name = "sky10-menu"
version = "0.1.0"
edition = "2021"
description = "Sky10 menu bar / system tray app"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
